@@ -596,10 +596,10 @@ AC_HEADER_STDC
 AC_CHECK_HEADERS(dlfcn.h fcntl.h grp.h limits.h langinfo.h \
 libintl.h locale.h ncurses.h poll.h pthread.h \
 signal.h stdarg.h stddef.h stdlib.h thread.h unistd.h utime.h termios.h \
-sys/audioio.h sys/file.h sys/lock.h sys/mkdev.h sys/modem.h db_185.h db.h \
+sys/audioio.h sys/file.h sys/lock.h sys/mkdev.h sys/modem.h \
 sys/param.h sys/poll.h sys/select.h sys/socket.h sys/time.h sys/times.h \
 sys/un.h sys/utsname.h sys/wait.h pty.h term.h libutil.h \
-ndbm.h db1/ndbm.h gdbm/ndbm.h sys/resource.h netpacket/packet.h)
+ndbm.h gdbm/ndbm.h sys/resource.h netpacket/packet.h)
 AC_HEADER_DIRENT
 
 # checks for typedefs
